--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  font-size: medium;
 }
 
 .about {
@@ -32,22 +32,40 @@
   color: #fff;
   font-size: 100px;
 }
-.submit-btn {
+button{
+  color:#ec5300;
   display: block;
   width: 100%;
   padding: 0.75rem;
   background-color: #ec5300;
-  color: black;
+  color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  font-size: 18px;
 }
-
-.submit-btn:hover {
-  background-color:#ecca00 ;
+button:hover {
+  background-color: #ecca00 ;
 }
 .button-image {
   width: 30px;
   height: 30px;
+  margin-right: 10px;
+}
+.form-container {
+  background-color: #ec9b00;
+  padding: 2rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 300px;
+  margin-left: 40px;  
 }
