--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -2,12 +2,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
-    height: 100px;
-    background-color: #f2f2f2;
-    border-radius: 5px;
+    height: 120px;
 }
-  
 .timer {
     font-size: 24px;
     font-weight: bold;
@@ -16,7 +12,16 @@
 .timer-label {
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
     color: #333;
+    margin-bottom: 5px;
 }
-  
+.icon{
+    height:100px;
+    margin-right: 30px;
+} 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ec9b00;
+}
