blockchain transactions added

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .lottery {
-  background-image: url('/images/img-1.jpg');
+  background-image: url('/images/coupons_1.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
