--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -14,6 +14,7 @@ h1 {
   max-width: 1120px;
   width: 90%;
   margin: 0 auto;
+  background-color: #fff;
 }
 
 .cards__wrapper {
@@ -30,6 +31,7 @@ h1 {
   flex: 1;
   margin: 0 1rem;
   border-radius: 10px;
+  background-color: #ffff80;
 }
 
 .cards__item__link {
@@ -81,7 +83,7 @@ h1 {
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  object-fit: cover;
+  object-fit: fill;
   transition: all 0.2s linear;
 }
 
