--- a/src/components/pages/SignIn.css
+++ b/src/components/pages/SignIn.css
@@ -7,7 +7,7 @@
     justify-content: center;
     height: 100vh;
     background-color: #ec9b00;
-    background-image: url('/images/img-8.jpg');
+    background-image: url('/images/ticket_background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat; 
