--- a/src/components/Grid.css
+++ b/src/components/Grid.css
@@ -6,7 +6,7 @@
     width: 400px;
     height: 400px;
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: #ec9b00;
   }
   
   .grid-cell {
