--- a/src/components/TicketContainer.css
+++ b/src/components/TicketContainer.css
@@ -2,6 +2,9 @@
     margin-bottom: 20px;
     text-align: center;
     font-size: x-large;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: x-large;
   }
   .ticket-modal {
     display: flex;
